# pokerbots

./: .gitignore  A.txt  README.md  analysis.py  config.py  engine.py  gamelog.txt  log.txt  log_analysis.py  manual_config.py  manual_engine.py  preflop.cpp  preflop.py  process.py
cpp_bot/: CMakeLists.txt
cpp_bot/OMPEval/: CMakeLists.txt  test
cpp_bot/src/: main.cpp
cppbot_v11_die_nit_6/OMPEval/omp/: CMakeLists.txt
cppbot_v12/: commands.json
cppbot_v12_adaptive_superearly_3/: build.sh
cppbot_v12_final/: preflop_equity_cpp.txt
input_bot/: player.py
jacobot_v3/: player.py
jacobot_v8/: player.py
nitbot/: player.py
ourbot_v1/: player.py
ourbot_v1 refined/: player.py
ourbot_v10/: description.txt  player.py  utils.py
ourbot_v10_2/: player.py  preflop_equity_exact.txt  utils.py
ourbot_v10_better_pre_no_taper/: player.py
ourbot_v10_gto/: player.py  test.py
ourbot_v10_original/: player.py  utils.py
ourbot_v1_not_scared/: player.py
ourbot_v1_refined/: player.py
ourbot_v1_refined_weighted/: player.py
ourbot_v2/: player.py
ourbot_v3/: player.py
ourbot_v4/: player.py  preflop_equity.txt
ourbot_v4_benchmark/: player.py
ourbot_v4_bluff/: player.py
ourbot_v5/: player.py
ourbot_v5_onsite/: player.py
ourbot_v5_onsite_noaggro/: preflop_equity.txt
ourbot_v6/: player.py
ourbot_v6_benchmark/: player.py
ourbot_v6_cap_up_bet_2/: player.py
ourbot_v7/: player.py
ourbot_v7_wide/: player.py
ourbot_v8/: player.py
ourbot_v8_fixed/: player.py
ourbot_v8_tight/: player.py
ourbot_v9/: player.py
ourbot_v9_pos_tracker/: player.py
(+11 files in other folders)
